tests/expr/string.err.out
error: string.err.li 1,10: undefined variable `undefined_variable`
    1 | echo("-- $undefined_variable --")
      |          ^^^^^^^^^^^^^^^^^^^
